# trading-project

./: .env.example  .gitignore  .pre-commit-config.yaml  BUG_FIX_IMPLEMENTATION_PLAN.MD  BUG_FIX_IMPLEMENTATION_PLAN.md  CLAUDE.md  CURRENT_IMPLEMENTATION_PLAN.md  PYTHON_PRODUCTION_STANDARDS.md  docker-compose.yml  mypy.ini  pyproject.toml  ruff.toml
.serena/: project.yml
energy_data_service/: ADD_BZN_TO_CONFIGURATION_FILES.md  CURRENT_IMPLEMENTATION_PLAN.md  CURRENT_IMPLEMENTATION_PLAN_NOW.md  Dockerfile  FAST_API_IMPLEMENTATION_PLAN.md  IMPLEMENTATION_PLAN_TEMPLATE.md  MINIMAL_DOCKER_DEPLOYMENT_PLAN.md  MVP_ARCHITECTURE.md  SCHEDULER_IMPLEMENTATION_PLAN.md  __init__.py  api_implementaion_plan.md  dockerfile  main.py  pyproject.toml  scheduler_implementation_plan.md
energy_data_service/.serena/: project.yml
energy_data_service/app/: __init__.py  container.py  main.py
energy_data_service/app/api/: __init__.py  app.py  dependencies.py
energy_data_service/app/api/schemas/: __init__.py  energy_data.py
energy_data_service/app/api/v1/: __init__.py
energy_data_service/app/collectors/: base_collector.py  entsoe_collector.py
energy_data_service/app/config/: database.py  logging.ini  settings.py
energy_data_service/app/exceptions/: __init__.py  collector_errors.py  collector_exceptions.py  config_validation_error.py  processor_exceptions.py  repository_exceptions.py  service_exceptions.py
energy_data_service/app/model/: collection_result.py  collection_status.py  data_quality.py  data_type.py  market_code.py  raw_data_point.py
energy_data_service/app/models/: __init__.py  alert.py  alert_enums.py  alert_rule.py  backfill_progress.py  base.py  collection_metrics.py  load_data.py  price_data.py
energy_data_service/app/processors/: __init__.py  base_processor.py  gl_market_document_processor.py  publication_market_document_processor.py
energy_data_service/app/repositories/: __init__.py  alert_repository.py  alert_rule_repository.py  backfill_progress_repository.py  base_repository.py  collection_metrics_repository.py  energy_data_repository.py  energy_price_repository.py
energy_data_service/app/services/: __init__.py  alert_service.py  backfill_service.py  entsoe_data_service.py  monitoring_service.py  scheduler_service.py
energy_data_service/tests/app/: test_container.py  test_main.py
energy_data_service/tests/app/api/: test_app.py  test_dependencies.py  test_energy_data_endpoints.py  test_health_endpoints.py
energy_data_service/tests/app/collectors/: test_entsoe_collector.py
energy_data_service/tests/app/config/: test_database.py  test_settings.py
energy_data_service/tests/app/exceptions/: test_collector_errors.py  test_collector_exceptions.py  test_processor_exceptions.py  test_service_exceptions.py
energy_data_service/tests/app/models/: test_backfill_progress.py  test_load_data.py  test_price_data.py
energy_data_service/tests/app/processors/: __init__.py  test_base_processor.py  (+2 more)
energy_data_service/tests/integration/: test_alert_service_integration.py  test_backfill_progress_repository_integration.py  test_backfill_service_integration.py  test_collector_integration.py  test_container_integration.py  test_database.py  test_energy_data_api_integration.py  test_entsoe_data_service_integration.py  test_health_endpoints_integration.py  test_monitoring_service_integration.py  test_processor_integration.py  test_repository_integration.py  test_scheduler_service_integration.py  test_unified_service.py
energy_strategy_service/: pyproject.toml
entsoe_client/: CURRENT_IMPLEMENTATION_PLAN.md  pyproject.toml
entsoe_client/src/entsoe_client/: __init__.py  container.py
(+225 files in other folders)
