[project]
name = "trading-project"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "types-pyyaml>=6.0.12.20250516",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "mypy>=1.16.1",
    "pre-commit>=4.2.0",
    "ruff>=0.12.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.workspace]
members = [
    "entsoe_client",
]
