[project]
name = "trading-project"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "types-pyyaml>=6.0.12.20250516",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "gitingest>=0.3.1",
    "mypy>=1.16.1",
    "pre-commit>=4.2.0",
    "pytest-xdist>=3.8.0",
    "ruff>=0.12.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.workspace]
members = [
    "entsoe_client",
    "energy_data_service",
]

[tool.mypy]
mypy_path = "energy_data_service:entsoe_client/src"
namespace_packages = true
explicit_package_bases = true
