[project]
name = "entsoe-client"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Aldair Petronilia (Mac)", email = "aldairpetronilia@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.11.7",
    "pydantic-xml>=2.17.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[dependency-groups]
dev = [
    "pytest>=8.4.1",
]
