[project]
name = "entsoe-client"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Aldair Petronilia (Mac)", email = "aldairpetronilia@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "pydantic-xml>=2.17.2",
    "dependency-injector>=4.41.0",
    "tenacity>=9.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-asyncio>=1.0.0",
]
